--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.3",
     "tailwindcss": "3.3.1",
     "transition-style": "^0.1.3"
   }
